# rust-x11-window-manager

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: lib.rs  types.rs  wm.rs
assignment/: Cargo.toml
assignment/src/: a_fullscreen_wm.rs  b_tiling_wm.rs  c_floating_windows.rs  d_minimising_windows.rs  e_fullscreen_windows.rs  f_gaps.rs  g_multiple_workspaces.rs  lib.rs  wm_error.rs
runner/: Cargo.toml
runner/src/: main.rs  main.rs.fullscreen
x11/: Cargo.toml
x11/src/: event.rs  ewmh.rs  input.rs  lib.rs  macros.rs  methods.rs  mouse.rs  types.rs  util.rs
